Fix gap and padding styles

--- a/src/components/templates/Reservation/ReservationTemplate.module.css
+++ b/src/components/templates/Reservation/ReservationTemplate.module.css
@@ -2,18 +2,18 @@
   display: flex;
   gap: 3%;
   justify-content: center;
-}
-
-.reservation__map {
-  min-height: 31.25rem;
-  width: 50%;
+  padding: 1rem 1rem var(--gap--small) 1rem;
 }
 
 .reservation__content {
-  width: 50%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10%;
+  gap: var(--gap--small);
+  @media screen and (min-width: 48rem) {
+    width: 50%;
+    gap: 10%;
+  }
 }
